# philosophist

./: .env.sample  .gitignore  pyproject.toml  requirements.txt
app/: main.py
app/core/: auth.py  config.py  cors.py  exceptions.py
app/infrastructure/: redis_client.py
app/routes/: judge.py  main.py
app/schemas/: domain.py  request.py  response.py
app/services/: fallacy_analyzer.py  llm.py
